Fix slanting hero from blocking top nav
Setting the overflow to `hidden` will make any part of the heading
contents that falls outside of the container hidden. This is needed
because if the window is made wide enough it'll eventually overlap with
the top nav.

--- a/app/webpacker/styles/sections/hero.scss
+++ b/app/webpacker/styles/sections/hero.scss
@@ -11,6 +11,7 @@
         display: flex;
         position: relative;
         box-sizing: border-box;
+        overflow: hidden;
 
         height: 500px;
 
